force-app/main/default/objects/UnitResponse__c/UnitResponse__c.object-meta.xml
<CustomObject>
    <label>UnitResponse</label>
    <nameField>
        <label>UnitResponse Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>UnitResponses</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>