force-app/main/default/objects/UnitResponse__c/fields/Attempts__c.field-meta.xml
<CustomField>
    <fullName>Attempts__c</fullName>
    <defaultValue>1</defaultValue>
    <label>Attempts</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>