force-app/main/default/objects/UnitResponse__c/fields/ModuleResponse__c.field-meta.xml
<CustomField>
    <fullName>ModuleResponse__c</fullName>
    <label>ModuleResponse</label>
    <referenceTo>ModuleResponse__c</referenceTo>
    <relationshipLabel>UnitResponses</relationshipLabel>
    <relationshipName>UnitResponses</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>