force-app/main/default/objects/UnitResponse__c/fields/Points_Achieved__c.field-meta.xml
<CustomField>
    <fullName>Points_Achieved__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Points Achieved</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>