force-app/main/default/objects/UnitResponse__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Attempts__c</columns>
    <columns>Completed__c</columns>
    <columns>Unit__c</columns>
    <columns>ModuleResponse__c</columns>
    <columns>Status__c</columns>
    <columns>User__c</columns>
    <columns>UPDATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>